[tool.poetry]
name = "rcs-project"
version = "0.1.0"
description = ""
authors = ["Malo <malo.ruelle@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pandas = "^2.2.3"
notebook = "^7.2.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
